# Studies

Algorytmy_I_Struktury_Danych/Grafy/: CMakeLists.txt  main.cpp
Algorytmy_I_Struktury_Danych/Quicksort wyklad/: Quicksort wyklad.VC.db  Quicksort wyklad.sln
Algorytmy_I_Struktury_Danych/cwiczenia4(countsort+radixsort)/: cwiczenia4(countsort+radixsort).sln
Algorytmy_I_Struktury_Danych/cwiczenia6/: cwiczenia6.VC.db  cwiczenia6.sln
Algorytmy_I_Struktury_Danych/cwiczenia8_2/: CMakeLists.txt  main.cpp
Algorytmy_I_Struktury_Danych/cwiczenia_8/: CMakeLists.txt
Algorytmy_I_Struktury_Danych/cwiczenia_kurdziel_2/: cwiczenia_kurdziel_2.sln
Algorytmy_I_Struktury_Danych/fizzbuzz/: CMakeLists.txt  main.cpp
Algorytmy_I_Struktury_Danych/grafy3/: CMakeLists.txt  main.cpp
Algorytmy_I_Struktury_Danych/heapify/: heapify.VC.db  heapify.sln
Algorytmy_I_Struktury_Danych/konkurs/: CMakeLists.txt  main.cpp
Algorytmy_I_Struktury_Danych/mergesortlisty/: mergesortlisty.VC.db  mergesortlisty.sln
Algorytmy_I_Struktury_Danych/ostatnielaby/: CMakeLists.txt  main.cpp
Algorytmy_I_Struktury_Danych/priorityqueue/: priorityqueue.VC.db  priorityqueue.sln
Algorytmy_I_Struktury_Danych/program_dynamiczne/: CMakeLists.txt  main.cpp
Algorytmy_I_Struktury_Danych/prostewstawianie/: prostewstawianie.VC.db  prostewstawianie.sln
Algorytmy_I_Struktury_Danych/prostewybieranie/: prostewybieranie.VC.db  prostewybieranie.sln
Algorytmy_I_Struktury_Danych/quicksort/: quicksort.VC.db  quicksort.sln
Bazy_Danych/lab2/: homework.sql  (+1 more)
Programowanie_Funkcyjne/lab1/: Setup.hs  lab1.cabal  stack.yaml
(+1217 files in other folders)
