name:                 lab1
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Aleksander Mikucki
maintainer:           mikucki@gmail.com
category:             Development
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable lab1
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
